refactor: metabaseutil, metabase2simplekpi: use SQLInfo in DatasetInfo; move NativeSQL() to SQLInfo from DatasetInfo

--- a/examples/dataset_query_sql/sample.env
+++ b/examples/dataset_query_sql/sample.env
@@ -4,4 +4,4 @@ METABASE_PASSWORD=mypassword
 METABASE_TOKEN=
 METABASE_TLS_SKIP_VERIFY=true
 
-METABASE_QUERY_SQL_INFO={"name":"New Items","databaseID":1, "sql":"SELECT COUNT(DISTINCT id), TRUNC(creation_time, 'Q') FROM mytable WHERE trunc(dt, 'dd') = (SELECT dt FROM mytable ORDER BY dt DESC LIMIT 1) GROUP BY trunc(creation_time, 'Q') ORDER BY trunc(creation_time, 'Q') ASC","colIdxCount":0,"colIdxDate":1}
+METABASE_QUERY_SQL_INFO={"name":"New Items","databaseID":1, "sql":"SELECT COUNT(DISTINCT id), TRUNC(creation_time, 'Q') FROM mytable WHERE trunc(dt, 'dd') = (SELECT dt FROM mytable ORDER BY dt DESC LIMIT 1) GROUP BY trunc(creation_time, 'Q') ORDER BY trunc(creation_time, 'Q') ASC","colIdxCount":0,"colIdxTime":1}
